--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 casual = "0.2.0"
 dirs = "5.0.1"
+serde = { version = "1.0.190", features = ["derive"] }
+toml = "0.8.6"
