--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 casual = "0.2.0"
+colored = "2.0.4"
 dirs = "5.0.1"
 serde = { version = "1.0.190", features = ["derive"] }
 toml = "0.8.6"
