--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "workflows"
 version = "0.1.0"
+authors=["Daniel Ronalds"]
 edition = "2021"
+description="A cli tool for creating a seemless workflow with remote and local git repos"
+license="MIT"
+readme="README.md"
+repository="https://github.com/danielronalds/workflows"
+keywords=["workflow","cli"]
+categories=["command-line-utilities","filesystem"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
